--- a/cyoa.css
+++ b/cyoa.css
@@ -9,6 +9,14 @@ p {
 }
 
 button {
+    font-size: 18px;
+    margin-top: 40px;
+}
+
+#button-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     font-size: 24px;
     padding: 10px;
     margin-bottom: 40px;
@@ -16,12 +24,6 @@ button {
     background-color: #333333;
     color: #DDDDDD;
     border: none;
-}
-
-#button-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 button:hover {
