--- a/cyoa.css
+++ b/cyoa.css
@@ -17,6 +17,9 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+button {
     font-size: 24px;
     padding: 10px;
     margin-bottom: 40px;
