--- a/cyoa.css
+++ b/cyoa.css
@@ -35,6 +35,12 @@ button:hover {
     animation-fill-mode: forwards;
 }
 
+button:disabled {
+    background-color: grey;
+    color: white;
+    cursor: not-allowed;
+}
+
 @keyframes button-expand {
     0% {
         transform: scale(1);
